--- a/Assets/Editor/Metamong.Editor.asmdef
+++ b/Assets/Editor/Metamong.Editor.asmdef
@@ -2,7 +2,8 @@
   "name": "Metamong.Editor",
     "references": [
       "Metamong.Runtime",
-      "Metamong.Shared"
+      "Metamong.Shared",
+      "Unity.EditorCoroutines.Editor"
   ],
   "includePlatforms": [
     "Editor"
